--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,9 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/public/css/styles.css" />
   </head>
   <body>
-    <h1>david</h1>
+    <div class="main-img">
+      
+      <h1>Hack the blog</h1>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h2 class="mid-titles mt-5">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur!
+          </h2>
+          <p class="mt-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi.</p>
+          <hr class="mt-2"/>
+          <h2 class="mid-titles">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur!
+          </h2>
+          <p class="mt-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi.</p>
+          <hr class="mt-2"/>
+          <h2 class="mid-titles">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur!
+          </h2 class="mt-2">
+          <p class="mt-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi.</p>
+          <hr class="mt-2"/>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
