--- a/views/article.ejs
+++ b/views/article.ejs
@@ -9,18 +9,22 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/css/styles.css" />
 
     <title>Article</title>
   </head>
   <body>
     <%- include("./partials/navbar.ejs") %>
 
-    <div class="container">
-      <div class="header">
+    <div class="header text-light text-center align-items-center">
+      <div class="pt-5">
         <h2>Name of the article</h2>
+
         <p class="fst-italic">Creado por Author Name el Month, Year</p>
       </div>
+    </div>
 
+    <div class="container px-3 mt-3">
       <div class="content">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio dolores rem ducimus sed
         voluptates praesentium. Enim cum, eum rerum aliquam tempora sed illum eaque. Adipisci, ab!
