--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,13 +14,13 @@
   </head>
   <body>
     <div class="main-img">
-      
-      <h1>Hack the blog</h1>
+      <%- include("./partials/navbar.ejs") %>
+      <h1 class="text-center mt-3">Hack the blog</h1>
     </div>
-    <div class="container">
+    <div class="container ">
       <div class="row">
         <div class="col-12">
-          <h2 class="mid-titles mt-5">
+          <h2 class="mid-titles mt-5 ">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur!
           </h2>
           <p class="mt-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi.</p>
@@ -38,5 +38,6 @@
         </div>
       </div>
     </div>
+    <%- include("./partials/footer.ejs") %>
   </body>
 </html>
