--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,31 +10,35 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/public/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="main-img">
-      <%- include("./partials/navbar.ejs") %>
-      <h1 class="text-center mt-3">Hack the blog</h1>
+    <%- include("./partials/navbar.ejs") %>
+
+    <div class="header text-light text-center align-items-center">
+      <div class="pt-5">
+        <h1 class="text-center mt-3">Hack the blog</h1>
+      </div>
     </div>
-    <div class="container ">
+
+    <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2 class="mid-titles mt-5 ">
+          <h2 class="mid-titles mt-5">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur!
           </h2>
           <p class="mt-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi.</p>
-          <hr class="mt-2"/>
+          <hr class="mt-2" />
           <h2 class="mid-titles">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur!
           </h2>
           <p class="mt-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi.</p>
-          <hr class="mt-2"/>
+          <hr class="mt-2" />
           <h2 class="mid-titles">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur!
-          </h2 class="mt-2">
+          </h2>
           <p class="mt-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi.</p>
-          <hr class="mt-2"/>
+          <hr class="mt-2" />
         </div>
       </div>
     </div>
