--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -46,7 +46,7 @@
                   <td>2023-09-24 00:00:00</td>
                   <td>Marty McFly</td>
                   <td>
-                    <a href="/usuarios/edit/">
+                    <a href="/admin/editar">
                       <button type="submit" class="btn btn-primary">Edit</button>
                     </a>
 
