--- a/views/editArticle.ejs
+++ b/views/editArticle.ejs
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Editar articulo</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <%- include("./partials/navbar.ejs") %>
-    <div class="container">
+    <div class="container mt-5">
       <h1>Edit article 1</h1>
       <form>
         <div class="mb-3">
@@ -22,13 +29,18 @@
           <label for="" class="form-label">Image</label>
           <input class="form-control" type="file" id="formFile" />
         </div>
-        <select class="form-select" aria-label="Default select example">
-          <option selected>Select...</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-        </select>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <div>
+          <label for="" class="form-label">Select author</label>
+          <select class="form-select mb-3" aria-label="Default select example">
+            <option selected>Select...</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>
+        </div>
+        <div class="d-grid gap-2">
+          <button type="submit" class="btn btn-primary">Edit</button>
+        </div>
       </form>
     </div>
     <%- include("./partials/footer.ejs") %>
