--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -17,6 +17,7 @@
       <div class="row justify-content-center">
         <div class="">
           <h2 class="mt-4">Articles</h2>
+          <a class="btn btn-success" href="/admin/create">Nuevo</a>
           <div class="">
             <table class="table table table-striped table-bordered">
               <thead>
