--- a/views/editArticle.ejs
+++ b/views/editArticle.ejs
@@ -19,11 +19,11 @@
       <form>
         <div class="mb-3">
           <label for="" class="form-label">Title</label>
-          <input type="text" class="form-control" id="titulo" />
+          <input type="text" class="form-control" value="<%=article.title%>" id="titulo" />
         </div>
         <div class="mb-3">
           <label for="" class="form-label">Content</label>
-          <input type="text" class="form-control" id="contenido" />
+          <input type="text" class="form-control" value="<%=article.content%>" id="contenido" />
         </div>
         <div class="mb-3">
           <label for="" class="form-label">Image</label>
@@ -33,9 +33,10 @@
           <label for="" class="form-label">Select author</label>
           <select class="form-select mb-3" aria-label="Default select example">
             <option selected>Select...</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
+
+            <% for(const user of users) { %>
+            <option value="<%= user.id %>"><%= user.firstname %> <%=user.lastname %></option>
+            <% } %>
           </select>
         </div>
         <div class="d-grid gap-2">
