--- a/views/article.ejs
+++ b/views/article.ejs
@@ -18,33 +18,27 @@
 
     <div class="header text-light text-center align-items-center">
       <div class="pt-5">
-        <h2>Name of the article</h2>
+        <h2><%=article.title%></h2>
 
-        <p class="fst-italic">Creado por Author Name el Month, Year</p>
+        <p class="fst-italic">
+          Creado por <%=article.user.firstname%> <%= article.user.lastname%> el
+          <%=article.createdAt%>
+        </p>
       </div>
     </div>
 
     <div class="container px-3 mt-3">
-      <div class="content">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio dolores rem ducimus sed
-        voluptates praesentium. Enim cum, eum rerum aliquam tempora sed illum eaque. Adipisci, ab!
-        Sint quidem labore vel laboriosam iure officiis nam alias dolorem itaque, eaque provident
-        corrupti tempore, mollitia repellat nostrum non! Blanditiis consectetur voluptatum quas
-        fugit! Autem veritatis magni hic inventore natus culpa blanditiis, iste deleniti porro, ea
-        et tenetur id ab quod, obcaecati praesentium dolore cumque vero! Quia, dolorum vel porro
-        consectetur laboriosam ratione labore rem. Suscipit excepturi iure nam nihil nostrum,
-        consequatur qui eveniet facere. Eius, porro corporis cumque consequatur placeat consectetur
-        tenetur sequi.
-      </div>
+      <div class="content"><%=article.content%></div>
       <hr />
       <section class="comments">
         <h3>Add your comment</h3>
         <form action="" class="form-control">
           <select class="form-select mt-2" aria-label="Default select example">
             <option selected>Select Author...</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
+
+            <% for (const user of users) { %>
+            <option value="<%= user.id%>"><%= user.firstname%> <%= user.lastname%></option>
+            <% } %>
           </select>
           <div class="form-floating">
             <textarea
@@ -59,12 +53,12 @@
         <!-- user comment -->
         <div>
           <h3 class="mt-4">Comments (3)</h3>
-          <p class="comment-content">
-            This is the conent of a comment Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Quidem, corporis. Veniam quae enim cupiditate distinctio facere eum quasi doloribus
-            molestias.
-          </p>
-          <p class="author">Author name</p>
+
+          <% for (const comentario of comment) { %>
+          <p class="comment-content"><%= comentario.content %></p>
+          <p class="author">author name</p>
+          <hr />
+          <% } %>
         </div>
         <!-- user comment end -->
       </section>
