--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
 
-      <a class="btn btn-outline-primary">Admin</a>
+      <a href="/admin" class="btn btn-outline-primary">Admin</a>
     </div>
   </div>
 </nav>
