--- a/views/newArticle.ejs
+++ b/views/newArticle.ejs
@@ -16,26 +16,28 @@
     <%- include("./partials/navbar.ejs") %>
     <div class="container mt-5">
       <h1>New Article</h1>
-      <form action="/" method="POST">
+      <form action="/articulos" method="post">
         <div class="mb-3">
           <label for="" class="form-label">Title</label>
-          <input type="text" class="form-control" id="titulo" />
+          <input type="text" class="form-control" id="titulo" name="newTitle" />
         </div>
         <div class="mb-3">
           <label for="" class="form-label">Content</label>
-          <input type="text" class="form-control" id="contenido" />
+          <input type="text" class="form-control" id="contenido" name="newContent" />
         </div>
         <div class="mb-3">
           <label for="" class="form-label">Image</label>
-          <input class="form-control" type="file" id="formFile" />
+          <input class="form-control" type="file" id="formFile" name="newImage" />
         </div>
         <div>
           <label for="" class="form-label">Select author</label>
-          <select class="form-select mb-3" aria-label="Default select example">
-            <option selected>Select...</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
+          <select class="form-select mb-3" aria-label="Default select example" name="newUserId">
+            <option disabled selected>Select...</option>
+
+            <% for(const user of users){ %>
+            <option value="<%= user.id %>"><%= user.firstname %> <%=user.lastname %></option>
+
+            <% } %>
           </select>
         </div>
         <div class="d-grid gap-2">
