--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand text-light" href="#">Hack the blog</a>
+    <a class="navbar-brand text-light" href="/">Hack the blog</a>
     <button
       class="navbar-toggler"
       type="button"
