--- a/views/article.ejs
+++ b/views/article.ejs
@@ -57,11 +57,10 @@
         <div>
           <h3 class="mt-4">Comments (3)</h3>
 
-          <% for (const comentario of comment) { %>
-          <p class="comment-content"><%= comentario.content %></p>
-          <p class="author">author name</p>
+          <!--  -->
+          <p class="comment-content">content</p>
+          <p class="author"></p>
           <hr />
-          <% } %>
         </div>
         <!-- user comment end -->
       </section>
