--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,9 +25,9 @@
           <input type="text" class="form-control" id="password" name="password" />
         </div>
         <div class="d-grid gap-2">
-          <a href="/admin">
-            <button type="submit" class="btn btn-primary">Ingresar</button>
-          </a>
+          <!-- <a href="/admin"> -->
+          <button type="submit" class="btn btn-primary">Ingresar</button>
+          <!-- </a> -->
         </div>
       </form>
     </div>
