--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -13,15 +13,35 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <form action="/articulos" method="post">
-      <div class="mb-3">
-        <label for="" class="form-label">Title</label>
-        <input type="text" class="form-control" id="titulo" name="newTitle" />
-      </div>
-      <div class="mb-3">
-        <label for="" class="form-label">Content</label>
-        <input type="text" class="form-control" id="contenido" name="newContent" />
-      </div>
-    </form>
+    <%- include("./partials/navbar.ejs") %>
+    <div class="container mt-5 pt-5">
+      <form action="/registro" method="post">
+        <div class="mb-3">
+          <label for="firstname" class="form-label">Firstname</label>
+          <input type="text" class="form-control" id="firstname" name="firstname" />
+        </div>
+        <div class="mb-3">
+          <label for="lastname" class="form-label">Lastname</label>
+          <input type="text" class="form-control" id="lastname" name="lastname" />
+        </div>
+        <div class="mb-3">
+          <label for="username" class="form-label">Username</label>
+          <input type="text" class="form-control" id="username" name="username" />
+        </div>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <input type="text" class="form-control" id="email" name="email" />
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" class="form-control" id="password" name="password" />
+        </div>
+        <div class="d-grid gap-2">
+          <!-- <a href="/admin"> -->
+          <button type="submit" class="btn btn-primary">Registrar</button>
+          <!-- </a> -->
+        </div>
+      </form>
+    </div>
   </body>
 </html>
