--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,6 @@
 <!-- Footer start -->
 <footer>
-  <hr />
-  <div class="d-flex justify-content-center">
+  <div class="d-flex justify-content-center mt-5">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       width="30"
