--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,8 +15,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
 
-      <a href="/registro" class="btn btn-outline-light mx-2">Register</a>
+      <a href="/usuarios/crear" class="btn btn-outline-light mx-2">Register</a>
       <a href="/login" class="btn btn-outline-light mx-2">Login</a>
+      <a href="/logout" class="btn btn-outline-danger mx-2">Logout</a>
       <a href="/admin" class="btn btn-outline-primary mx-2">Admin</a>
     </div>
   </div>
