--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Register</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,7 +15,7 @@
   <body>
     <%- include("./partials/navbar.ejs") %>
     <div class="container mt-5 pt-5">
-      <form action="/registro" method="post">
+      <form action="/usuarios" method="post">
         <div class="mb-3">
           <label for="firstname" class="form-label">Firstname</label>
           <input type="text" class="form-control" id="firstname" name="firstname" />
@@ -42,6 +42,7 @@
           <!-- </a> -->
         </div>
       </form>
+      <%- include("./partials/footer.ejs") %>
     </div>
   </body>
 </html>
