--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -16,46 +16,47 @@
     <%- include("./partials/navbar.ejs") %>
     <div class="container">
       <div class="row justify-content-center">
-        <div class="">
-          <h2 class="mt-4">Articles</h2>
-          <a class="btn btn-success" href="/articulos/crear">Nuevo</a>
-          <div class="">
-            <table class="table table table-striped table-bordered">
-              <thead>
-                <tr>
-                  <th class="thAdmin font-weight-bold" scope="col">ID</th>
-                  <th class="thAdmin" scope="col">Title</th>
-                  <th class="thAdmin" scope="col">Content</th>
-                  <th class="thAdmin" scope="col">Image</th>
-                  <th class="thAdmin" scope="col">Create at</th>
-                  <th class="thAdmin" scope="col">Author</th>
-                  <th class="thAdmin" scope="col">Actions</th>
-                </tr>
-              </thead>
-              <tbody>
-                <% for(const article of articles) { %>
-                <tr>
-                  <th scope="row"><%=article.id %></th>
-                  <td><%=article.title %></td>
-                  <td><%=article.content %></td>
-                  <td><%=article.image %></td>
-                  <td><%=article.createdAt %></td>
-                  <td><%=article.user.firstname %> <%=article.user.lastname %></td>
-                  <td>
-                    <a href="/articulos/<%= article.id %>/editar">
-                      <button type="submit" class="btn btn-primary">Edit</button>
+        <div class="text-center">
+          <h1 class="mt-4">Articles</h1>
+        </div>
+        <a class="btn btn-success w-25" href="/articulos/crear">Nuevo</a>
+
+        <div class="mt-3">
+          <table class="table table table-striped table-bordered">
+            <thead>
+              <tr>
+                <th class="thAdmin font-weight-bold" scope="col">ID</th>
+                <th class="thAdmin" scope="col">Title</th>
+                <th class="thAdmin" scope="col">Content</th>
+                <th class="thAdmin" scope="col">Image</th>
+                <th class="thAdmin" scope="col">Create at</th>
+                <th class="thAdmin" scope="col">Author</th>
+                <th class="thAdmin" scope="col">Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% for(const article of articles) { %>
+              <tr>
+                <th scope="row"><%=article.id %></th>
+                <td><%=article.title %></td>
+                <td><%=article.content %></td>
+                <td><%=article.image %></td>
+                <td><%=article.createdAt %></td>
+                <td><%=article.user.firstname %> <%=article.user.lastname %></td>
+                <td>
+                  <a href="/articulos/<%= article.id %>/editar">
+                    <button type="submit" class="btn btn-primary w-100">Edit</button>
+                  </a>
+                  <form action="/articulos/<%=article.id %>?_method=delete" method="post">
+                    <a href="/admin/eliminar/">
+                      <button type="submit" class="btn btn-danger w-100 mt-2">Delete</button>
                     </a>
-                    <form action="/articulos/<%=article.id %>?_method=delete" method="post">
-                      <a href="/admin/eliminar/">
-                        <button type="submit" class="btn btn-danger">Delete</button>
-                      </a>
-                    </form>
-                  </td>
-                </tr>
-                <% } %>
-              </tbody>
-            </table>
-          </div>
+                  </form>
+                </td>
+              </tr>
+              <% } %>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
