--- a/views/article.ejs
+++ b/views/article.ejs
@@ -18,7 +18,7 @@
 
     <div class="header text-light text-center align-items-center">
       <div class="pt-5">
-        <h2><%=article.title%></h2>
+        <h1><%=article.title%></h1>
 
         <p class="fst-italic">
           Creado por <%=article.user.firstname%> <%= article.user.lastname%> el
@@ -31,8 +31,8 @@
       <div class="content"><%=article.content%></div>
       <hr />
       <section class="comments">
-        <h3>Add your comment</h3>
         <form action="/comentarios/create" method="post" class="form-control">
+          <h3 class="text-center">Add your comment</h3>
           <select class="form-select mt-2" aria-label="Default select example" name="userId">
             <option disabled selected>Select Author...</option>
 
@@ -42,6 +42,8 @@
           </select>
           <div class="form-floating">
             <textarea
+              rows="8"
+              style="height: 100%"
               class="form-control mt-2"
               placeholder="Leave a comment here"
               id="content"
@@ -54,7 +56,7 @@
           </div>
         </form>
         <!-- user comment -->
-        <div>
+        <div class="border rounded p-2 mt-2">
           <h3 class="mt-4">Comments (3)</h3>
 
           <% for (const comentario of article.comments) {%>
