--- a/views/editArticle.ejs
+++ b/views/editArticle.ejs
@@ -14,7 +14,7 @@
   </head>
   <body>
     <%- include("./partials/navbar.ejs") %>
-    <div class="container mt-5">
+    <div class="container mt-5 border rounded py-2">
       <h1>Edit article 1</h1>
       <form action="/articulos/<%= article.id %>/update?_method=patch" method="POST">
         <!-- <input type="hidden" name="_method" value="PATCH" /> -->
