--- a/views/newArticle.ejs
+++ b/views/newArticle.ejs
@@ -14,7 +14,7 @@
   </head>
   <body>
     <%- include("./partials/navbar.ejs") %>
-    <div class="container mt-5">
+    <div class="container mt-5 border rounded py-2">
       <h1>New Article</h1>
       <form action="/articulos" method="post">
         <div class="mb-3">
